# ask.sh

./: .clinerules  .gitignore  Cargo.toml  README.md  examples.md  install.sh  installer.sh  lint.sh
examples/: memo
src/: main.rs  messages.rs  prompts.rs
src/llm/: anthropic.rs  mod.rs  openai.rs
