[package]
name = "ai_sh"
version = "0.1.0"
edition = "2021"

[dependencies]
"dotenv"="*"
"regex"="*"
"openai-api-stream-rs" = "0.1.0"
"tokio" = { version = "1.12.0", features = ["full"] }
"futures" = "0.3.19"
tinytemplate = "1.2.1"
serde_json = "1.0.96"
serde = "1.0.163"

[[bin]]
name = "ask"
path = "./src/main.rs"
