[package]
name = "ask-sh"
version = "0.5.0"
edition = "2021"
authors = ["hmirin <hmirin@example.com>"]
description = "An AI command line assistant, which is context-aware and multi-turn capable."
license = "MIT"
repository = "https://github.com/hmirin/ask.sh/"

[dependencies]
"dotenv"="0.15.0"
"regex"="1.8.3"
"tokio" = { version = "1.12.0", features = ["full"] }
"futures" = "0.3.19"
tinytemplate = "1.2.1"
async-openai = "0.18.3"
once_cell = "1.19.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
pin-project = "1.0"

[[bin]]
name = "ask-sh"
path = "./src/main.rs"
